Category Sidebar Added

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,9 +5,11 @@ executable(
     'Application.vala',
     'windows/MainWindow.vala',
     'widgets/HeaderBar.vala',
+    'widgets/CategorySideBar.vala',
 
     dependencies: [
-        dependency('gtk+-3.0')
+        dependency('gtk+-3.0'),
+        dependency('granite')
     ],
     
     install: true
